# bmi-prms6-streamtemp

bmi-prms6-streamtemp/: bmi-prms6-streamtemp.sln
bmi-prms6-streamtemp/bmi-prms6-streamtemp/: bmi-prms6-streamtemp.vfproj
src/: CMakeLists.txt  bmi.f90  bmi_prms_streamtemp.f90  m_prms_streamtemp.f90
